Trying new java memory options to reduce GC pause.